--- a/style.css
+++ b/style.css
@@ -1,145 +1,38 @@
 
-h1
+main
 {
-	color : white;
-	font-size : 3em;
-	text-align : center;
-	margin: 5% auto;
-}
+	box-shadow: 30px 0px 40px rgb(196, 196, 196), -30px 0px 40px rgb(196, 196, 196);
+    margin: auto;
 
+    max-width: 900px;
+    max-height: 950px;
+    /*padding: 0px 20px 20px 0px ;*/
 
-h2
-{
-	background-color: #D8D8D8;
-	display: inline-block;
-	margin : 0;
 
 }
-
-h3
-{
-	color : white;
-	font-size : 1.5em;
-	text-align: center;
-	margin: 3%;
-}
-
-h4
-{
-
-	color : white;
-	font-size : 1.6em;
-	text-align : center;
-	margin-top: 0.5em;
-	margin-bottom: 0.5em;
-	background-color : #1599a8;
-}
-
-.icon
-{
-	margin-left : 5%;
-	width: 10%;
-	min-width: 28px;
-	height: 10%;
-	min-height: 28px;
-}
-
-.info
-{
-	color : white;
-	margin-left: 20px;
-	font-size: 1.10em;
-
-}
-
-.infos
-{
-	display: flex;
-	align-items: center;	/*mettre en centre verticalement*/
-	margin: 2% auto;		
-	
-}
-
-.langue
-{
-	color : white;
-	margin: 1% 10% 1% 10%;
-	text-align: left;
-	font-size: 1.25em;
-}
-.hobby
-{
-	color : white;
-	margin : 3% 10% 3% 10%;
-	text-align: left;
-	font-size: 1.15em;
-}
-
-.underline
-{
-	text-decoration: underline;
-}
-
-.centre
-{
-	text-align : center;
-}
-
-.gras
-{
-	font-weight: bold;
-}
-
-
-body
-{
-	background-image: url("image/greyzz.png");
-	display : flex;
-	
-}
-
-
-section
-{
-	display : block;
-	vertical-align: top;
-	margin-right: 1%;
-}
-
-a{
-	color: white;
-}
-
-a:hover
-{
-	color : skyblue;
-}
-
-ul
-{
-	border : #1599a8 2px solid;
-	box-shadow: 5px 5px 0px black
-}
-
-#liseret,#contenue
-{
+.triangle-green{
 	display : inline-block;
-	vertical-align: top;
+	height : 0;
+	width : 0;
+	border-top : 150px solid #138C9A;
+	border-right : 275px solid transparent;
 }
 
-#liseret
+
+.triangle-gray{					/*triangle gray background colors*/
+	height : 0;
+	width : 0;
+	border-bottom : 150px solid #C1C1C1;
+	border-left : 275px solid transparent;
+}
+
+
+.section_left
 {
-	background-image: url('image/lodyas.png');
-	width: 15%;
-	min-width: 15%;
-    margin-right: 3%;
-    height: 925px;
-    border-radius: 50px;
-}
 
-#pp
-{
-	margin : 0 auto;
-	width : 50%;
+	width: 275px;
+    height: 600px;
+    color: white;
+	background-color: #C1C1C1;
+	
 }
-
