--- a/style.css
+++ b/style.css
@@ -9,8 +9,14 @@ main
     max-width: 900px;
     /*max-height: 950px;*/
     padding: 0px 0px 20px 0px ;
+}
 
-
+.end
+{
+	display : flex;
+	width: 100%;
+	color: red;
+	margin-top: 20px;
 }
 
 header
@@ -38,8 +44,25 @@ h4
 	justify-content: center;
 	align-items: center;
 	font-size: 1.4em;
-
 }
+
+h5
+{	
+	background-color: #C1C1C1;
+	display: flex;
+	height : 50px;
+	justify-content: center;
+	align-items: center;
+	font-size: 1.4rem;
+	width: 40%;
+}
+
+.banner
+{
+	display: flex;
+	justify-content: center;
+}
+
 .triangle-green{
 	display : inline-block;
 	height : 0;
@@ -49,14 +72,12 @@ h4
 	
 }
 
-
 .triangle-gray{					/*triangle gray background colors*/
 	height : 0;
 	width : 0;
 	border-bottom : 150px solid #C1C1C1;
 	border-left : 250px solid transparent;
 	margin-left: 20px;
-
 }
 
 .photo
@@ -77,6 +98,14 @@ h4
     color: white;
 	background-color: #C1C1C1;
 	margin-left: 20px;
+	float : left;
+}
+
+.section_right
+{	
+	margin : -175px 27.5px 0 0;
+	float : right;
+	width : 575px
 }
 
 .description
@@ -121,4 +150,11 @@ h4
 {
 	color : black;
 	margin-left: 15px;
+}
+
+hr.light
+{
+	border-top: 2px solid white;
+	width: 90%;
+	margin-bottom: -10px;
 }
