--- a/style.css
+++ b/style.css
@@ -54,8 +54,10 @@ h5
 	justify-content: center;
 	align-items: center;
 	font-size: 1.4rem;
-	width: 40%;
+	width: 70%;
 	margin-bottom: 10px;
+	margin-top: 10px;
+	flex-wrap: nowrap;
 }
 
 .year
@@ -80,6 +82,8 @@ h5
 {
 	border : gray 3px dashed;
 	margin-bottom: 10px;
+	padding-left: 5px;
+	padding-top: 5px;
 }
 
 .formation
@@ -110,7 +114,8 @@ h5
 .text_top
 {
 	display: flex;
-	justify-content: flex-end;
+	align-items: flex-start;
+	flex-flow : column wrap;		/*mettre en colonne*/
 }
 
 /*
@@ -166,7 +171,7 @@ h5
 
 .section_right
 {	
-	margin : -175px 27.5px 0 0;
+	margin : -150px 27.5px 0 0;
 	float : right;
 	width : 575px
 }
