--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ h5
 	font-size: 1.4rem;
 	width: 70%;
 	margin-bottom: 10px;
-	margin-top: 10px;
+	margin-top: 0px;
 	flex-wrap: nowrap;
 }
 
@@ -132,6 +132,27 @@ h5
 }
 */
 
+.experience
+{
+	display : flex;
+	align-items: flex-start;
+	flex-flow : column wrap;
+}
+
+.projet
+{
+	display : flex;
+	align-items: flex-start;
+	flex-flow : column wrap;
+}
+
+.competence
+{
+	display: flex;
+	align-items: flex-start;
+	flex-flow: column wrap;
+}
+
 .triangle-green{
 	display : inline-block;
 	height : 0;
@@ -162,7 +183,7 @@ h5
 .section_left
 {
 	width: 250px;
-    height: 775px;
+    height: 925px;
     color: white;
 	background-color: #C1C1C1;
 	margin-left: 20px;
