--- a/style.css
+++ b/style.css
@@ -5,38 +5,83 @@ body
 main
 {
 	box-shadow: 30px 0px 40px rgb(196, 196, 196), -30px 0px 40px rgb(196, 196, 196);
-    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
     max-width: 900px;
+    margin: 0 auto 0 ;
     /*max-height: 950px;*/
     padding: 0px 0px 20px 0px ;
 }
 
-.end
-{
-	display : flex;
-	width: 100%;
-	color: red;
-	margin-top: 20px;
+.top-barre{
+    position : absolute;
+    background-color: black;
+    width: 100%;
+    max-width: 900px;
+    height : 25px;
+
 }
 
-header
-{
-	background-color: black;
-	height: 25px;
-	margin-bottom: 10px;
+.triangle-green{
+    position: absolute;
+	height : 0;
+	width : 0;
+	border-top : 150px solid #138C9A;
+	border-right : 270px solid transparent;
 }
 
-
-h2
+.photo
 {
+	position : absolute;
+    z-index: 1;
+	top: 40px ;
+	margin-left: 2.5%;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+	overflow: hidden;
+}
+
+.section-left
+{
+    display : block;
+    margin-top : 182px;
+	width: 250px;
+    color: white;
+	background-color: #C1C1C1;
+
+	margin-left: 20px;
+
+}
+.triangle-gray{					/*triangle gray background colors*/
+
+    position : absolute;
+    top : 40px;
+	border-bottom : 150px solid #C1C1C1;
+	border-left : 250px solid transparent;
+
+
+}
+
+.description h2
+{
+	padding-top: 30px;
     text-align: center;
-  	color : #345B94;
-  	font-size : 35px
+    color: #345B94;
+    font-size: 35px;
 }
 
-h4
+.description p
 {
-	margin : -5px 0 -5px 0;
+	color : #345B94;
+	font-size : 19px;
+	text-align: center;
+	margin-top: -20px;
+}
+
+.info h4{
+    margin : -5px 0 -5px 0;
 	background-color: #1599a8;
 	height: 50px;
 	color: white;
@@ -46,59 +91,77 @@ h4
 	font-size: 1.4em;
 }
 
-h5
-{	
-	background-color: #C1C1C1;
-	display: flex;
-	height : 40px;
-	justify-content: center;
-	align-items: center;
-	font-size: 1.4rem;
-	width: 70%;
-	margin-bottom: 10px;
-	margin-top: 0px;
-	flex-wrap: nowrap;
-}
-
-.year
-{
-	background-color: black;
-	color: white;
-	width: 100px;
-	height: 30px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+.info img{
+    padding: 10px;
+    width: 35px;
+	height : 35px;
 
 }
 
-.banner_gray
-{
-	display: flex;
-	justify-content: center;
+.info p {
+
+    color: black;
+
 }
 
-.dashed_carrer
-{
-	border : gray 3px dashed;
-	margin-bottom: 10px;
-	padding-left: 5px;
-	padding-top: 5px;
+.info-box{
+    display: flex;
+    align-items: center;
 }
 
-.formation
+.langue
 {
-	display : flex;
+
+	margin-left: 15px;
+}
+
+.hobby{
+    margin-left: 15px;
+}
+
+/* ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+
+.section-right{
+    padding: 10px;
+    margin: 15px;
+    width: 560px;
+}
+
+.formation-content{
+	border : gray 2px dashed;
+    padding : 2px;
+}
+
+.section-right h5{
+    margin-top : 10px;
+    margin-bottom: 5px;
+    text-align: center;
+    font-size: 24px;
+    background-color: #C1C1C1;
+    width: 100%;
+    padding : 3px;
+}
+.formation-year {
+    background-color: black;
+    color: white;
+    font-size: 16px;
+    padding : 5px;
+    margin : 2px;
+    width : 70px;
 }
 
 .arrow_bot
 {
 	background: black;
 	height: 25px;
-	width: 2px;
+	width: 3px;
 	position : relative;
 	transition : all 0.2s;
 	margin-right : 55px;
+    left: 2px;
+    top : -10px;
+    
 }
 
 .arrow_bot::before,.arrow_bot::after
@@ -109,29 +172,18 @@ h5
 	height: 3px;
 	width: 50px;
 	bottom: 0;
+    
 }
 
-.text_top
-{
-	display: flex;
-	align-items: flex-start;
-	flex-flow : column wrap;		/*mettre en colonne*/
+.flex-info{
+    display: flex;
+}
+.column-box{
+    display: flex;
+    flex-direction: column;
 }
 
-/*
-.arrow_bot::before
-{
-	transform: rotate(45deg);
-	transform-origin : right;
-}
-
-.arrow_bot::after
-{
-	transform: rotate(-45deg);
-	transform-origin : right;
-}
-*/
-
+/* //// //////////////////////////////////////////useless */
 .experience
 {
 	display : flex;
@@ -151,110 +203,4 @@ h5
 	display: flex;
 	align-items: flex-start;
 	flex-flow: column wrap;
-}
-
-.triangle-green{
-	display : inline-block;
-	height : 0;
-	width : 0;
-	border-top : 150px solid #138C9A;
-	border-right : 270px solid transparent;
-}
-
-.triangle-gray{					/*triangle gray background colors*/
-	height : 0;
-	width : 0;
-	border-bottom : 150px solid #C1C1C1;
-	border-left : 250px solid transparent;
-	margin-left: 20px;
-}
-
-.photo
-{
-	position : absolute;
-	top: 40px ;
-	margin-left: 2.5%;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-	overflow: hidden;
-}
-
-.section_left
-{
-	width: 250px;
-    height: 925px;
-    color: white;
-	background-color: #C1C1C1;
-	margin-left: 20px;
-	float : left;
-}
-
-.section_right
-{	
-	margin : -150px 27.5px 0 0;
-	float : right;
-	width : 575px
-}
-
-.description
-{
-	padding-top: 10%;
-}
-
-.post
-{
-	color : #345B94;
-	font-size : 19px;
-	text-align: center;
-	margin-top: -20px;
-}
-
-.infos
-{	
-	display: flex;
-	color : black;
-	margin : -10px 0 -15px 0;
-}
-
-.icon
-{
-	width: 35px;
-	height : 35px;
-	margin : 0 8px 0 8px;
-}
-.put_center
-{
-	display: flex;
-	align-items: center;
-}
-
-.langue
-{
-	color: black;
-	margin-left: 15px;
-}
-
-.hobby
-{
-	color : black;
-	margin-left: 15px;
-}
-
-hr.light
-{
-	border-top: 2px solid white;
-	width: 90%;
-	margin-bottom: -10px;
-}
-
-@media screen and (max-width: 900px)
-{
-	.section_left
-	{
-		margin-bottom: 175px;
-	}
-	.section_right{
-		float : left;
-	}
 }
