--- a/style.css
+++ b/style.css
@@ -6,10 +6,14 @@
     margin: 0;
 }
 
+body p {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
 .main-container {
     box-shadow: 30px 0px 40px rgb(196, 196, 196), -30px 0px 40px rgb(196, 196, 196);
     max-width: 900px;
-    margin: 5px auto;
+    margin: 0px auto;
     padding: 0px 0px 20px 0px;
 }
 
@@ -55,6 +59,7 @@ header {
     margin-top: 150px;
     margin-left: 15px;
     flex-shrink: 0;
+
 }
 
 .triangle-gray {
@@ -87,6 +92,7 @@ header {
     line-height: 50px;
     margin-top: 15px;
     font-size: 23px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
 .infos img {
@@ -125,7 +131,7 @@ header {
 /* Partie droite */
 
 .section-Left {
-    width: 600px;
+    width: 575px;
     min-width: 200px;
     margin: 0 auto;
 }
@@ -139,6 +145,7 @@ header {
     width: 100%;
     padding: 3px;
     border-radius: 5px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .formation-content {
@@ -163,9 +170,9 @@ header {
 
 
 .arrow_bot {
-    background: black;
-    height: 20px;
-    width: 3px;
+    background: darkblue;
+    height: 19px;
+    width: 2px;
     position: relative;
     transition: all 0.2s;
     margin-right: 55px;
@@ -174,14 +181,15 @@ header {
 
 }
 
-.arrow_bot::before,
+
 .arrow_bot::after {
     position: absolute;
     content: "";
     background: darkblue;
-    height: 3px;
+    height: 2px;
     width: 50px;
     bottom: 0;
+
 }
 
 .experience p {
