--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 
 body p {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif */
 }
 
 .main-container {
@@ -44,10 +44,18 @@ header {
     position: absolute;
     width: 200px;
     height: 200px;
-    margin: 0 35px;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 35px;
     z-index: 1;
+}
+
+.photo img {
+
+    width: 175px;
+    border-radius: 50%;
+
 }
 
 .container {
@@ -66,7 +74,8 @@ header {
     margin-top: 150px;
     margin-left: 15px;
     flex-shrink: 0;
-
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .triangle-gray {
@@ -79,7 +88,7 @@ header {
 }
 
 .description h1 {
-    padding-top: 60px;
+    padding-top: 55px;
     text-align: center;
     color: #345B94;
     font-size: 35px;
@@ -219,6 +228,7 @@ header {
 
 .competence li {
     list-style-type: none;
+    padding: 2px;
 }
 
 @media screen and (max-width : 700px) {
